# Fast-API

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 1fa58cdce515_create_my_user_table.py  40725beb865d_.py
app/: main.py
app/config/: settings.py
app/models/: user.py
app/responses/: base_response.py  user_response.py
app/routs/: user.py
app/schemas/: user_schemas.py
app/services/: base_service.py  user_service.py
postgres/: Dockerfile  init.sh
